[package]
name = "mev-arbitrage-bot-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.23"
colored = "2.0.0"
csv = "1.3.0"
dotenv = "0.15.0"
fern = {version = "0.6.2", features = ["colored"]}
log = "0.4.17"
once_cell = "1.18.0"
serde = "1.0.145"
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.30"

# EVM based crates
ethers = { version = "2.0.14", features = ["full"] }
cfmms = "0.6.2"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
