[package]
name = "mev_bot_arbitrage_v4"
version = "4.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.11.0"
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0.15"
once_cell = "1.19"
rust_decimal = { version = "1.35", features = ["maths"] }
hex-literal = "0.4"
futures-util = "0.3"
csv = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
prometheus = "0.13"
lazy_static = "1.4"
futures = "0.3.31"
oracle = "0.6.3"
